// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with SelectField props 1`] = `
Object {
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </React.Fragment>,
  "className": "css-1p60bua css-63it0p css-jwhr8m bb-Box bb-Select",
  "disabled": undefined,
  "label": "This is a label",
  "onChange": [Function],
  "wrapElement": [Function],
}
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-gray300,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-23 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-18 emotion-1 emotion-23 test bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`overrides SelectField.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-gray300,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-21 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-21 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should assign a ref 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-0[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

<select
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Select"
  id="id-test"
>
  <option
    value="sunny"
  >
    Sunny
  </option>
  <option
    value="windy"
  >
    Windy
  </option>
  <option
    value="overcast"
  >
    Overcast
  </option>
</select>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-8 {
  border-color: var(--bb-palette-danger,#000000);
  box-shadow: var(--bb-palette-dangerTint,#000000) 0px 0px 0px 3px !important;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="true"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for large size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1.5rem;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for medium size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1.25rem;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for small size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-8 {
  border-color: var(--bb-palette-success,#000000);
  box-shadow: var(--bb-palette-successTint,#000000) 0px 0px 0px 3px !important;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-8 {
  border-color: var(--bb-palette-warning,#000000);
  box-shadow: var(--bb-palette-warningTint,#000000) 0px 0px 0px 3px !important;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-23 {
  background-color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-18 emotion-1 emotion-23 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a default value 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          selected=""
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        disabled=""
        id="id-test"
      >
        <option
          disabled=""
          value="sunny"
        >
          Sunny
        </option>
        <option
          disabled=""
          value="windy"
        >
          Windy
        </option>
        <option
          disabled=""
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with isLoading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-16.emotion-16 {
  font-size: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  height: 2.75em;
  margin: 0 0.75em;
  top: 0;
  right: 0;
  z-index: 2;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-15 {
  color: var(--bb-palette-text,#000000) !important;
}

.emotion-13 {
  line-height: 1;
  font-size: 20px;
}

.emotion-12 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-11 {
  stroke-dasharray: 250;
  stroke-dashoffset: 200px;
  stroke: var(--bb-palette-text,#000000);
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<div
  class="emotion-20 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-19 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <div
        class="emotion-13 emotion-1 emotion-15 emotion-16 bb-SelectSpinner bb-Box bb-Spinner"
      >
        <svg
          class="emotion-12 bb-Spinnervector"
          viewBox="22 22 44 44"
        >
          <circle
            class="emotion-11 bb-SpinnerloaderCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-6 {
  color: var(--bb-palette-danger,#000000);
  margin-left: 0.25rem;
  font-weight: 600;
  font-size: 0.875rem;
}

.emotion-10 {
  margin-bottom: 0.75rem !important;
}

.emotion-8 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-17.emotion-17 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-11[disabled],
.emotion-11[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-11[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-11:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-14 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-21 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-21 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-10 bb-Box"
    >
      <div
        class="emotion-1 emotion-8 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
        <div
          class="emotion-1 emotion-2 emotion-6 bb-FieldWrapperRequiredText bb-Box"
        >
          *
        </div>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-20 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        aria-required="true"
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-14 emotion-1 emotion-2 emotion-17 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with name 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
        name="test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render placeholder correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-gray300,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

<div
  class="emotion-18 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`theming SelectField.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: var(--bb-palette-text,#000000);
  fill: var(--bb-palette-text,#000000);
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-gray300,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-8[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-21 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-21 emotion-1 emotion-2 bb-Box bb-SelectField"
>
  <div
    class="emotion-18 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
          for="id-test"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 bb-SelectWrapper bb-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 bb-Box bb-Select"
        id="id-test"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="emotion-11 emotion-1 emotion-2 emotion-14 bb-SelectIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;
